Fixed bug where service cards were not properly aligned, adjusted services-overview class align-items to stretch

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -150,7 +150,7 @@ nav {
 
 .services-overview {
     display: flex;
-    align-items: center;
+    align-items: stretch;
     flex-direction: column;
     padding: 2rem 4rem;
     gap: 1rem;
